tests/typing/bad/testfile-multiple-1.c
int main() {}
int main() { void x; }
int main() {}
